src/generation/snapshots/nn_data_generator__max_for_path.snap
---
created: "2019-05-13T22:07:31.848033Z"
creator: insta@0.8.1
source: src/generation/nn_data_generator.rs
expression: max_state
---
CSVOp {
    fm: 60.75,
    fa: 33.0,
    pm: 1.0,
    pa: 2.0,
    g: 1.0,
    l: 161.9777777777778,
    v: 191
}
