src/generation/snapshots/nn_data_generator__min_csv_data.snap
---
created: "2019-05-12T23:50:24.651270Z"
creator: insta@0.8.1
source: src/generation/nn_data_generator.rs
expression: min
---
CSVOp {
    fm: 0.0,
    fa: 0.0,
    pm: 0.0,
    pa: -0.5,
    g: 0.0,
    t: 0.0
}
