src/generation/snapshots/nn_data_generator__min_for_path.snap
---
created: "2019-05-13T22:07:31.887680Z"
creator: insta@0.8.1
source: src/generation/nn_data_generator.rs
expression: min_state
---
CSVOp {
    fm: 0.0,
    fa: -10.2,
    pm: -1.0,
    pa: -1.7857142857142858,
    g: 0.0,
    l: 0.0,
    v: 0
}
