src/generation/snapshots/nn_data_generator__normal_form_to_subdivided_test.snap
---
created: "2019-05-12T23:50:24.560975Z"
creator: insta@0.8.1
source: src/generation/nn_data_generator.rs
expression: csv_data
---
[
    [
        CSVOp {
            fm: 1.0,
            fa: 0.0,
            pm: 1.0,
            pa: -0.5,
            g: 1.0,
            t: 0.0
        },
        CSVOp {
            fm: 1.0,
            fa: 0.0,
            pm: 1.0,
            pa: -0.5,
            g: 1.0,
            t: 0.5
        },
        CSVOp {
            fm: 2.0,
            fa: 0.0,
            pm: 1.0,
            pa: 0.0,
            g: 1.0,
            t: 1.0
        },
        CSVOp {
            fm: 2.0,
            fa: 0.0,
            pm: 1.0,
            pa: 0.0,
            g: 1.0,
            t: 1.5
        },
        CSVOp {
            fm: 1.0,
            fa: 0.0,
            pm: 1.0,
            pa: 0.0,
            g: 0.5,
            t: 2.0
        },
        CSVOp {
            fm: 1.0,
            fa: 0.0,
            pm: 1.0,
            pa: 0.0,
            g: 0.5,
            t: 2.5
        },
        CSVOp {
            fm: 1.0,
            fa: 0.0,
            pm: 1.0,
            pa: 0.0,
            g: 1.0,
            t: 3.0
        },
        CSVOp {
            fm: 1.0,
            fa: 0.0,
            pm: 1.0,
            pa: 0.0,
            g: 1.0,
            t: 3.5
        },
        CSVOp {
            fm: 1.0,
            fa: 0.0,
            pm: 1.0,
            pa: 0.0,
            g: 1.0,
            t: 4.0
        },
        CSVOp {
            fm: 1.0,
            fa: 0.0,
            pm: 1.0,
            pa: 0.0,
            g: 1.0,
            t: 4.5
        }
    ],
    [
        CSVOp {
            fm: 1.0,
            fa: 0.0,
            pm: 1.0,
            pa: 0.0,
            g: 1.0,
            t: 0.0
        },
        CSVOp {
            fm: 1.0,
            fa: 0.0,
            pm: 1.0,
            pa: 0.0,
            g: 1.0,
            t: 0.5
        },
        CSVOp {
            fm: 1.0,
            fa: 0.0,
            pm: 1.0,
            pa: 0.0,
            g: 1.0,
            t: 1.0
        },
        CSVOp {
            fm: 1.0,
            fa: 0.0,
            pm: 1.0,
            pa: 0.0,
            g: 1.0,
            t: 1.5
        },
        CSVOp {
            fm: 1.0,
            fa: 0.0,
            pm: 1.0,
            pa: 0.0,
            g: 1.0,
            t: 2.0
        },
        CSVOp {
            fm: 1.0,
            fa: 0.0,
            pm: 1.0,
            pa: 0.0,
            g: 1.0,
            t: 2.5
        },
        CSVOp {
            fm: 1.0,
            fa: 0.0,
            pm: 1.0,
            pa: 0.0,
            g: 1.0,
            t: 3.0
        },
        CSVOp {
            fm: 1.0,
            fa: 0.0,
            pm: 1.0,
            pa: 0.0,
            g: 1.0,
            t: 3.5
        },
        CSVOp {
            fm: 1.0,
            fa: 0.0,
            pm: 1.0,
            pa: 0.0,
            g: 1.0,
            t: 4.0
        },
        CSVOp {
            fm: 1.0,
            fa: 0.0,
            pm: 1.0,
            pa: 0.0,
            g: 1.0,
            t: 4.5
        }
    ]
]
